# package-base-ui

./: .gitignore  README.md  build.sh  docker-compose.yml  nginx.conf
backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs  routes.rs
frontend/: .eslintrc  .gitignore  build.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/serve/: Cargo.toml  Dockerfile  Rocket.toml
frontend/serve/src/: main.rs
frontend/src/: App.ts  component.ts  index.ts  store.ts
frontend/src/components/: app.ts  component.I.ts  component.ts  state-full-component.I.ts  state-full-component.ts
frontend/src/components/nav-bar/: nav-bar.ts
frontend/src/components/top-bar/: style.module.css  top-bar.ts
frontend/src/lib/components/: component.ts
frontend/src/stores/: packages.ts  size.ts  store.I.ts  store.ts  stores.ts
pkgui-frontend/: package.json
pkgui-frontend/src/: index.ts
pkgui-frontend/src/components/nav-bar/: nav-bar.ts
pkgui-frontend/src/lib/components/: state-full-component.ts
pkgui-frontend/src/stores/: packages.ts
pkgui-server/: Cargo.toml  Dockerfile
pkgui-server/src/: main.rs
