[package]
name = "pkgui-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pkgui-server"
path = "src/main.rs"

[dependencies]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.dotenv]
version = "0.15.0"
